# stan-mcp-server

./: .gitignore  README.md  pyproject.toml  test_server.py  test_server_http.py
stan_mcp_server/: server.py
